# legalairag

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_browser.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  fraud_detection_agent.py  research_agent.py  summarization_agent.py
api/: __init__.py  auth.py  main.py
api/middleware/: __init__.py  audit_log.py  metrics.py  rate_limit.py  security_headers.py
api/routers/: __init__.py  auth_router.py  documents.py  fraud.py  search.py
api/schemas/: __init__.py  documents.py  fraud.py  search.py
config/: logging.py  secrets.py  settings.py
docs/: AGENT_ARCHITECTURE.md  API.md  API_EXAMPLES.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT.md  FRAUD_DETECTION.md  GLOSSARY.md  INDIANA_COURTS_ECOSYSTEM.md  RUNBOOK.md  SECURITY.md  SYSTEM_ANALYSIS.md  SYSTEM_DESIGN.md  TESTING.md
generation/: __init__.py  bedrock_client.py  generator.py  validator.py
generation/prompts/: legal_qa.py
infrastructure/: deploy.sh
infrastructure/cdk/: app.py
infrastructure/cdk/stacks/: api_stack.py  cdn_stack.py  ingestion_stack.py  observability_stack.py  retrieval_stack.py
infrastructure/docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  init.sql  localstack-init.sh  seed_dev_data.py
infrastructure/scripts/: ingest_indiana_code.py
ingestion/: __init__.py  __main__.py  cli.py
ingestion/pipeline/: chunker.py  embedder.py  worker.py
ingestion/queue/: sqs.py
ingestion/sources/: document_loader.py  ecosystem_clients.py  indiana_courts.py  public_resource.py
retrieval/: __init__.py  authority.py  evaluator.py  hybrid_search.py  indexer.py  query_parser.py  reranker.py
tests/data/: eval_queries.json
tests/e2e/: test_live_pipeline.py  test_rag_pipeline.py
tests/integration/: __init__.py  test_bedrock.py  test_pgvector.py  test_sqs.py
tests/performance/: test_benchmarks.py
tests/unit/: test_api_auth.py  test_api_documents.py  test_api_fraud.py  test_api_main.py  test_api_search.py  test_authority.py  test_base_agent.py  test_bedrock_client.py  test_chunker.py  test_cli.py  test_document_loader.py  test_ecosystem_clients.py  test_embedder.py  test_evaluator.py  test_fraud_detection.py  test_generator.py  test_hybrid_search.py  test_indexer.py  test_indiana_courts.py  test_ingestion_init.py  test_legal_qa.py  test_logging.py  test_middleware.py  test_mycase_client.py  test_public_resource.py  test_query_parser.py  test_reranker.py  test_research_agent.py  test_secrets.py  test_settings.py  test_sqs.py  test_summarization_agent.py  test_validator.py  test_worker.py
ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/__tests__/: ChatInterface.test.tsx  DocumentUpload.test.tsx  FraudAnalysis.test.tsx  LoginForm.test.tsx  ResultCard.test.tsx  SearchBar.test.tsx  SearchResults.test.tsx
ui/src/api/: client.ts
ui/src/components/: ChatInterface.tsx  DocumentUpload.tsx  FraudAnalysis.tsx  LoginForm.tsx  ResultCard.tsx  SearchBar.tsx  SearchResults.tsx
