[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "generation", "ingestion", "retrieval"]

[project]
name = "indyleg"
version = "0.7.0"
description = "Indiana Legal RAG Platform — AI-powered legal research and document intelligence"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.128,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.28,<1.0",

    # AWS
    "boto3>=1.34,<2.0",
    "botocore>=1.34,<2.0",

    # Config
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",

    # Document parsing
    "pdfplumber>=0.11,<1.0",
    "python-docx>=1.1,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.2,<6.0",

    # Text / NLP
    "rank-bm25>=0.2.2,<0.3",
    "sentence-transformers>=3.0,<6.0",
    "tiktoken>=0.12.0,<1.0",

    # Vector store (pgvector)
    "psycopg[binary]>=3.1,<4.0",
    "pgvector>=0.3,<1.0",

    # OpenSearch (optional alternative)
    "opensearch-py>=2.6,<3.0",

    # Async / queues
    "aioboto3>=13.0,<14.0",
    "aio-pika>=9.4,<10.0",

    # Auth
    "PyJWT>=2.8,<3.0",

    # Observability
    "structlog>=24.2,<26.0",
    "opentelemetry-api>=1.24,<2.0",
    "opentelemetry-sdk>=1.24,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "moto[s3,sqs,batch]>=5.0,<6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # allow Depends() in FastAPI defaults
    "S608",  # SQL from internal vars, not user input
    "UP017", # keep timezone.utc (local Python < 3.11)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # test fixtures use dummy credentials

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["api", "agents", "config", "generation", "ingestion", "retrieval"]
omit = [
    "tests/*",
    "infrastructure/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests requiring live external services (deselect with -m 'not live')",
]
